@@ -363,7 +363,7 @@ Nested item 3.
 
 \item {} 
 This nested list should be compacted by the HTML writer.
-\hypertarget{target}{}% Even if this item contains a target and a comment. 
+% Even if this item contains a target and a comment. 
 
 \end{itemize}
 
@@ -374,7 +374,7 @@ This nested list should be compacted by the HTML writer.
 
 \hypertarget{enumerated-lists}{}
 \pdfbookmark[1]{2.3~~~Enumerated Lists}{enumerated-lists}
-\subsection*{2.3~~~Enumerated Lists}
+\subsection*{2.3~~~\hypertarget{target}{}Enumerated Lists}
 \newcounter{listcnt1}
 \begin{list}{\arabic{listcnt1}.}
 {
@@ -772,8 +772,8 @@ citation.
 \hypertarget{targets}{}
 \pdfbookmark[1]{2.13~~~Targets}{targets}
 \subsection*{2.13~~~Targets}
-\hypertarget{example}{}
-This paragraph is pointed to by the explicit ``example'' target. A
+
+\hypertarget{example}{}This paragraph is pointed to by the explicit ``example'' target. A
 reference can be found under \href{\#inline-markup}{Inline Markup}, above. \href{\#inline-hyperlink-targets}{Inline
 hyperlink targets} are also possible.
 
